import uuid
from datetime import date
from decimal import Decimal

from django.conf import settings
from django.core.validators import MinValueValidator
from django.db import models
from django.db.models import Sum


class Trip(models.Model):
    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    title = models.CharField(max_length=200)
    description = models.TextField()
    destination = models.CharField(max_length=300)
    date = models.DateField()
    cost = models.DecimalField(
        max_digits=8,
        decimal_places=2,
        validators=[MinValueValidator(0.01)],
    )
    school_id = models.CharField(max_length=50)
    activity_id = models.CharField(max_length=50)
    capacity = models.PositiveIntegerField(default=30)
    registration_close_date = models.DateField(null=True, blank=True)
    payment_due_date = models.DateField(null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        ordering = ['date']

    def __str__(self):
        return self.title

    @property
    def registration_open(self):
        if self.registration_close_date is None:
            return True
        return date.today() <= self.registration_close_date

    @property
    def spots_remaining(self):
        active = self.registrations.filter(
            status__in=['pending', 'registered', 'confirmed'],
        ).count()
        return self.capacity - active

    @property
    def is_full(self):
        return self.spots_remaining <= 0


class Registration(models.Model):
    STATUS_CHOICES = [
        ('pending', 'Pending'),
        ('registered', 'Registered'),
        ('confirmed', 'Confirmed'),
        ('failed', 'Failed'),
        ('cancelled', 'Cancelled'),
    ]

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    trip = models.ForeignKey(Trip, on_delete=models.CASCADE, related_name='registrations')
    parent = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        null=True,
        blank=True,
        on_delete=models.SET_NULL,
        related_name='registrations',
    )
    child = models.ForeignKey(
        'accounts.Child',
        null=True,
        blank=True,
        on_delete=models.SET_NULL,
        related_name='registrations',
    )
    student_name = models.CharField(max_length=200)
    parent_name = models.CharField(max_length=200)
    parent_email = models.EmailField()
    parent_phone = models.CharField(max_length=20, blank=True, default='')
    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='pending')
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    def __str__(self):
        return f"{self.student_name} - {self.trip.title}"


class Transaction(models.Model):
    STATUS_CHOICES = [
        ('success', 'Success'),
        ('failed', 'Failed'),
        ('pending', 'Pending'),
    ]

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    registration = models.OneToOneField(
        Registration, on_delete=models.CASCADE, related_name='transaction',
    )
    amount = models.DecimalField(max_digits=8, decimal_places=2)
    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='pending')
    transaction_ref = models.CharField(max_length=100, blank=True, default='')
    error_message = models.TextField(blank=True, default='')
    card_last_four = models.CharField(max_length=4)
    processed_at = models.DateTimeField(null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"TX {self.transaction_ref} - {self.status}"


class Withdrawal(models.Model):
    RESOLUTION_CHOICES = [
        ('credit', 'Account Credit'),
        ('refund', 'Refund to Card'),
    ]
    STATUS_CHOICES = [
        ('completed', 'Completed'),
        ('pending', 'Pending'),
        ('failed', 'Failed'),
    ]

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    registration = models.OneToOneField(
        Registration, on_delete=models.CASCADE, related_name='withdrawal',
    )
    amount = models.DecimalField(max_digits=8, decimal_places=2)
    resolution = models.CharField(max_length=10, choices=RESOLUTION_CHOICES)
    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default='pending')
    processed_at = models.DateTimeField(null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)

    def __str__(self):
        return f"Withdrawal {self.id} - {self.resolution} ({self.status})"


class AccountCredit(models.Model):
    REASON_CHOICES = [
        ('withdrawal', 'Trip Withdrawal'),
        ('payment', 'Payment Applied'),
    ]

    id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    user = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.CASCADE,
        related_name='credits',
    )
    amount = models.DecimalField(max_digits=8, decimal_places=2)
    reason = models.CharField(max_length=20, choices=REASON_CHOICES)
    registration = models.ForeignKey(
        Registration, null=True, blank=True,
        on_delete=models.SET_NULL, related_name='credit_entries',
    )
    note = models.TextField(blank=True, default='')
    created_at = models.DateTimeField(auto_now_add=True)

    class Meta:
        ordering = ['-created_at']

    def __str__(self):
        return f"Credit {self.amount} for {self.user} ({self.reason})"

    @classmethod
    def balance_for_user(cls, user):
        result = cls.objects.filter(user=user).aggregate(total=Sum('amount'))
        return result['total'] or Decimal('0.00')
